# Parallel-spherical-manipulator

./: D.m  Forward_kinematics.m  Functions_validation.m  Inverse_kinematic_solver.m  Inverse_kinematics.m  J.m  K_global.m  K_link.m  MSA.m  Optimization_result  Orientations.mat  Parameters_optimization.m  Q.m  Q_d.m  R_T.m  Rx.m  Rx_d.m  Ry.m  Ry_d.m  Rz.m  Rz_d.m  Test.m  Trans_d.m  Tx.m  VJM.m  VJM_solution.m  Work_space.m  Workspace_analysis.mat  lambda_e.m  lambda_r.m  remove_dont_forget.m
Differential kinematics/: J_ee.m  J_leg.m  J_v1.m  J_v2.m  Jacobians_symbolic_solution.m  Sing_v1.m  Sing_v2.m
Forward kinematics/: FK_symbolic_solution.m  Forward_kinematics_v1.m  Forward_kinematics_v1.prj  Forward_kinematics_v2.m  Forward_kinematics_v2.prj  H_leg.m  R_to_eulXYZ.m  Weighted_error.m
Inverse kinematics/: A_q1.m  A_q2.m  B_q1.m  B_q2.m  C_q1.m  C_q2.m  IK_symbolic_solution.m  Inverse_kinematics.m  Inverse_kinematics_v1.m  Inverse_kinematics_v2.m  q3_find.m
Python realization/: A1_example.py  A1_motor.py  A1_motor_calibration.pkl  A1_py.cpp  CMakeLists.txt  PSM.py  point_to_point_psm.py  psm_calibration.py  ptp_psm.py  ptp_psm_validation.py  testing_psm_assy.py  validation_motors.py  validation_psm.py  validation_trans_ratio.py
Stiffness analysis/: K_link.m  MSA.m  Stiffness_analysis_main.m  VJM.m
Workspace optimization/: Collision_check.m  Cost_function.m  Cost_function.prj  Cost_function_mex.mexw64  Grid_search_path.m  Sing_v1.m  Sing_v2.m  Spiral_path_on_maximum_ws.m  Workspace_calculation.m  Workspace_optimization.mlx  Workspace_visualization.m
(+668 files in other folders)
